[metadata]
name = autonl
version = attr: autonl.__version__
description = Manage newline at end of file
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
url = https://github.com/yukihira1992/autonl
author = Takayuki Hirayama
author_email = th.windbell+github@gmail.com
license = MIT
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
    Topic :: Text Processing
    Topic :: Text Processing :: Filters
keywords = newline, text, EOF, automation, format

[options]
zip_safe = False
python_requires = >=3.5
packages =
    autonl
entry_points = file: entry_points.cfg
